force-app/main/default/objects/Case_Ext_DoI__c.object
<CustomObject>
    <fields>
        <fullName>GBH_Reported_Date__c</fullName>
        <description>When did you report the accepted or declined gift, benefit or hospitality?</description>
        <inlineHelpText>When did you report the accepted or declined gift, benefit or hospitality?</inlineHelpText>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBH_Section__c</fullName>
        <description>7. Gifts, benefits, and hospitality</description>
        <inlineHelpText>Have you accepted or declined any gifts, benefits or hospitality valued over $500 in connection with your employment at Monash University?</inlineHelpText>
        <label>Gifts, Benefits, &amp; Hospitality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_Plan_Feedback__c</fullName>
        <label>Management Plan Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Plan_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a management plan requested</description>
        <label>Management Plan Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Plan__c</fullName>
        <description>GCP front end Management Plan form will submit to this field</description>
        <label>Management Plan</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OI_Section__c</fullName>
        <description>8. Other support</description>
        <inlineHelpText>Do you have any other interests and/or commitments that you feel may represent an actual, perceived or potential Conflict of Interest that you wish to declare?</inlineHelpText>
        <label>Other Interests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_Summary__c</fullName>
        <description>8. Please describe other interests and/or commitments you wish to declare</description>
        <inlineHelpText>Please describe other interests and/or commitments you wish to declare</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRO_Procurement_Involvement__c</fullName>
        <description>3. In relation to the above commitments, do you have a personal interest with any individual, company or organisation which is, or has the potential to be, involved in the procurement process as a provider, supplier, contractor or other recipients of benefit through the procurement process?</description>
        <inlineHelpText>Do you have a personal interest with any individual, company or organisation which is, or has the potential to be, involved in the procurement process?</inlineHelpText>
        <label>Procurement Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRO_Section__c</fullName>
        <description>3. Procurement</description>
        <inlineHelpText>In your role at Monash University are you involved in any procurement activities, regardless of funding source?</inlineHelpText>
        <label>Procurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRO_Summary__c</fullName>
        <description>3. Please outline what procurement activities you undertake which do, or may, benefit this organisation or individual. For example: raising purchase orders, assessing tender applications or awarding contracts.</description>
        <inlineHelpText>Please outline what procurement activities you undertake</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_Benefit_Source__c</fullName>
        <description>Please describe your relationship with the source of the personal benefit</description>
        <inlineHelpText>Please describe your relationship with the source of the personal benefit</inlineHelpText>
        <label>Benefit Source</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_Benefits_From__c</fullName>
        <description>The type of benefits gained</description>
        <label>Benefits From</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials, Biomedical or Other Research</fullName>
                </value>
                <value>
                    <fullName>External role with Interest in Monash</fullName>
                </value>
                <value>
                    <fullName>Financial Interest</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Licensing or Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_Benefits_Summary__c</fullName>
        <description>What is the nature of the personal benefit relating to your research or commercialisation activity?</description>
        <inlineHelpText>What is the nature of the personal benefit relating to your research or commercialisation activity?</inlineHelpText>
        <label>Benefits Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_Benefits_Value__c</fullName>
        <description>The estimated value of the personal benefit from research or commercialisation activity</description>
        <inlineHelpText>The estimated value of the personal benefit from research or commercialisation activity</inlineHelpText>
        <label>Benefits Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RC_Personal_Gain__c</fullName>
        <description>This refers to situations where you are a researcher, author or research supervisor who could receive direct or indirect personal benefit, including, but is not limited to a financial benefit, from or through:
- the outcome of clinical trials, biomedical or other research; 
- commercialisation, collaborations and relationships with industry in the licensing and marketing of research discoveries or teaching resources, including through the creation of a spin-off company or the creation of products or services; 
- providing exclusive access to University intellectual property without following procedures for the commercialisation of intellectual property; 
- as part of a sponsored research project or research activity, entering into a contract on behalf of the University with an outside entity in which they, an immediate family member or business partner/s has a financial interest either directly or through another related outside entity;
- assigning a student, trainee or postdoc</description>
        <inlineHelpText>Are you a researcher, author or research supervisor who could receive direct or indirect personal benefit?</inlineHelpText>
        <label>Personal Gain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_Research_Summary__c</fullName>
        <description>What is the nature of your research or commercialisation activity?</description>
        <inlineHelpText>What is the nature of your research or commercialisation activity?</inlineHelpText>
        <label>Research Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_Section__c</fullName>
        <description>4. Research &amp; Commercialisation</description>
        <inlineHelpText>Are you involved in any research or commercialisation activities as part of your role at Monash University?</inlineHelpText>
        <label>Research &amp; Commercialisation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RST_Recruitment_Supervision_Teaching__c</fullName>
        <description>Involved in recruitment, supervision or teaching</description>
        <inlineHelpText>Do you take part in any of the following recruitment, supervision or teaching activities with someone with whom you have a close personal relationship with:
- recruitment and appointment;
- supervision or approval of salary or leave entitlements;
- supervision, teaching or assessment;
- assessment of academic promotion, study leave or any other benefit;
- the engagement of contractors; or
- any other activity which actually or may be perceived to afford either party a benefit, advantage or bias</inlineHelpText>
        <label>Recruitment, Supervision or Teaching?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RST_Relationship_Type__c</fullName>
        <description>What is the nature of your relationship with this individual?</description>
        <inlineHelpText>What is the nature of your relationship with this individual?</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close Friend</fullName>
                </value>
                <value>
                    <fullName>Financial Dependent</fullName>
                </value>
                <value>
                    <fullName>Intimate Relationship (past or present)</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RST_Section__c</fullName>
        <description>Do you have a close personal relationship with a member of staff (including a member of the associated workforce or current student at Monash University?</description>
        <inlineHelpText>Do you have a close personal relationship with a member of staff (including a member of the associated workforce or current student at Monash University?</inlineHelpText>
        <label>Recruitment, Supervision &amp; Teaching</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RST_Staff_Department__c</fullName>
        <description>What is their division/faculty at Monash?</description>
        <inlineHelpText>What is their division/faculty at Monash?</inlineHelpText>
        <label>Staff Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RST_Staff_Position__c</fullName>
        <description>What is their position title at Monash?</description>
        <inlineHelpText>What is their position title at Monash?</inlineHelpText>
        <label>Staff Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RST_Staff_or_Student__c</fullName>
        <description>Are they a staff member or student?</description>
        <inlineHelpText>Are they a staff member or student?</inlineHelpText>
        <label>Staff or Student Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff Member</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RST_Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff recruitment</fullName>
                </value>
                <value>
                    <fullName>Staff appointment</fullName>
                </value>
                <value>
                    <fullName>Student admissions</fullName>
                </value>
                <value>
                    <fullName>Supervision</fullName>
                </value>
                <value>
                    <fullName>Salary/Timesheet approvals</fullName>
                </value>
                <value>
                    <fullName>Leave entitlement approvals</fullName>
                </value>
                <value>
                    <fullName>Teaching or Assessments</fullName>
                </value>
                <value>
                    <fullName>Academic promotion</fullName>
                </value>
                <value>
                    <fullName>Assessment of Other Benefits</fullName>
                </value>
                <value>
                    <fullName>Engagement of Contractors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Assessment__c</fullName>
        <inlineHelpText>Does this declaration give rise to a conflict of interest (actual, perceived or potential)?</inlineHelpText>
        <label>Conflict Self Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Used as external Id by GCP forms to allow draft and resubmission functionality</description>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case Extension - DoI</label>
    <nameField>
        <displayFormat>DoI-{00000000}</displayFormat>
        <label>DoI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Extensions - DoI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>